--- a/css/theme/source/custom.scss
+++ b/css/theme/source/custom.scss
@@ -30,7 +30,7 @@ $headingTextShadow: none;
 $headingLetterSpacing: normal;
 $headingTextTransform: normal;
 $headingFontWeight: 600;
-$linkColor: #42affa;
+$linkColor: #1E14AC;
 $linkColorHover: color.scale( $linkColor, $lightness: 15% );
 $selectionBackgroundColor: rgba( $linkColor, 0.75 );
 
