--- a/css/theme/source/gpt.scss
+++ b/css/theme/source/gpt.scss
@@ -17,12 +17,36 @@
     padding: 1rem;
     border: 2px solid rgb(92, 130, 143);
     border-radius: 2px;
+    font-size: smaller;
+    background-color: rgb(171, 203, 245, .02);
+    
 }
 
 .italic {
     font-style: italic;
 }
 
-.salespoint {
+.things {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 2rem;
+}
 
+
+.small-boxed-desc {
+    font-size: .6rem;
+    padding: 2rem;
+    width: fit-content;
+    border: 2px solid rgb(92, 130, 143);
+    
+
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
