--- a/css/theme/source/gpt.scss
+++ b/css/theme/source/gpt.scss
@@ -50,3 +50,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+.row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
